# kigo

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Mainpage.dox  README  TODO  index.docbook  kigo.categories  snapcraft.yaml
cmake/: FindGNUGo.cmake
data/: CMakeLists.txt
data/games/: CMakeLists.txt  Honinbo-51-5.sgf
data/icons/: CMakeLists.txt
data/sounds/: CMakeLists.txt
data/themes/: CMakeLists.txt  default.desktop  kigo_default.svgz  kigo_marble-bamboo.svgz  kigo_marble.svgz  kigo_plain.svgz  kigo_wood-bamboo.svgz  kigo_wood-fabric.svgz  kigo_wood-metal.svgz  marble-bamboo.desktop  marble.desktop  plain.desktop  wood-bamboo.desktop  wood-fabric.desktop  wood-metal.desktop
doc/: CMakeLists.txt  index.docbook
docs/: index.docbook
experimental/screens/: gamescreen.h  messagescreen.cpp  setupscreen.cpp  setupscreen.h  setupscreen.ui
experimental/src/game/: goengine.cpp  goengine.h  goplayer.cpp  goplayer.h  goscore.cpp  goscore.h
experimental/tests/: CMakeLists.txt  goenginetest.cpp  goenginetest.h
experimental/widgets/: infowidget.cpp  infowidget.h  infowidget.ui
po/ar/: kigo.po
po/ast/: kigo.po
po/bg/: kigo.po
po/bs/: kigo.po
po/ca/: kigo.po
po/ca/docs/kigo/: index.docbook
po/ca@valencia/: kigo.po
po/cs/: kigo.po
po/da/: kigo.po
po/de/: kigo.po
po/de/docs/kigo/: index.docbook
po/el/: kigo.po
po/en_GB/: kigo.po
po/eo/: kigo.po
po/es/: kigo.po
po/es/docs/kigo/: index.docbook
po/et/: kigo.po
po/et/docs/kigo/: index.docbook
po/eu/: kigo.po
po/fi/: kigo.po
po/fr/: kigo.po
po/fr/docs/kigo/: index.docbook
po/ga/: kigo.po
po/gl/: kigo.po
po/he/: kigo.po
po/hi/: kigo.po
po/hr/: kigo.po
po/hsb/: kigo.po
po/hu/: kigo.po
po/ia/: kigo.po
po/id/: kigo.po
po/is/: kigo.po
po/it/: kigo.po
po/it/docs/kigo/: index.docbook
po/ja/: kigo.po
po/ka/: kigo.po
po/kk/: kigo.po
po/km/: kigo.po
po/ko/: kigo.po
po/lt/: kigo.po
po/lv/: kigo.po
po/mai/: kigo.po
po/ml/: kigo.po
po/mr/: kigo.po
po/ms/: kigo.po
po/nb/: kigo.po
po/nds/: kigo.po
po/nl/: kigo.po
po/nl/docs/kigo/: index.docbook
po/nn/: kigo.po
po/pl/: kigo.po
po/pt/: kigo.po
po/pt/docs/kigo/: index.docbook
po/pt_BR/: kigo.po
po/pt_BR/docs/kigo/: index.docbook
po/ro/: kigo.po
po/ru/: kigo.po
po/ru/docs/kigo/: index.docbook
po/sa/: kigo.po
po/sk/: kigo.po
po/sl/: kigo.po
po/sl/docs/kigo/: index.docbook
po/sr/: kigo.po
po/sr@ijekavian/: kigo.po
po/sr@ijekavianlatin/: kigo.po
po/sr@latin/: kigo.po
po/sv/: kigo.po
po/sv/docs/kigo/: index.docbook
po/th/: kigo.po
po/tr/: kigo.po
po/ug/: kigo.po
po/uk/: kigo.po
po/uk/docs/kigo/: index.docbook
po/zh_CN/: kigo.po
po/zh_TW/: kigo.po
src/: CMakeLists.txt  Mainpage.dox  Messages.sh  kgo.kcfg  kgo.knsrc  kigo-games.knsrc  kigo.kcfg  kigo.knsrc  kigo.qrc  main.cpp  module.dsc  preferences.kcfgc
src/game/: engine.cpp  engine.h  game.cpp  game.h  goengine.cpp  goengine.h  goplayer.h  goscore.h  gtp.cpp  gtp.h  move.cpp  move.h  oldgoengine.cpp  oldgoengine.h  player.cpp  player.h  score.cpp  score.h  stone.cpp  stone.h
src/gui/: config.cpp  config.h  config.ui  gamescene.cpp  gamescene.h  gamescreen.cpp  gamescreen.h  gamescreen.ui  gameview.cpp  gameview.h  kgo.desktop  kgoui.rc  kigo.desktop  kigoui.rc  mainwindow.cpp  mainwindow.h  org.kde.kigo.appdata.xml  org.kde.kigo.desktop  setupscreen.cpp  setupscreen.h  setupscreen.ui  themerenderer.cpp  themerenderer.h
src/gui/config/: generalconfig.cpp  generalconfig.h  generalconfig.ui
src/gui/graphicsview/: gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  themerenderer.cpp  themerenderer.h
src/gui/screens/: errorscreen.cpp  errorscreen.h  errorscreen.ui  gamescreen.cpp  gamescreen.h  gamescreen.ui  messagescreen.cpp  messagescreen.h  messagescreen.ui  setupscreen.cpp  setupscreen.h  setupscreen.ui
src/gui/widgets/: editwidget.cpp  editwidget.h  editwidget.ui  errorwidget.cpp  errorwidget.h  errorwidget.ui  gamewidget.cpp  gamewidget.h  gamewidget.ui  infowidget.cpp  infowidget.h  infowidget.ui  scorewidget.cpp  scorewidget.h  scorewidget.ui  setupwidget.cpp  setupwidget.h  setupwidget.ui
tests/: goenginetest.cpp  goenginetest.h
themes/: default.desktop  kgo_default.svgz
