install(FILES
    default.desktop kigo_default.svgz kigo_default.png
    wood-metal.desktop kigo_wood-metal.svgz #kigo_wood-metal.png
    wood-bamboo.desktop kigo_wood-bamboo.svgz #kigo-wood-bamboo.png
    marble-bamboo.desktop kigo_marble-bamboo.svgz #kigo-marble-bamboo.png
DESTINATION ${DATA_INSTALL_DIR}/kigo/themes)
