install(FILES
    default.desktop kigo_default.svgz kigo_default.png
    marble.desktop kigo_marble.svgz #kigo-marble.png
    wood-metal.desktop kigo_wood-metal.svgz #kigo_wood-metal.png
    wood-fabric.desktop kigo_wood-fabric.svgz #kigo-wood-fabric.png
DESTINATION ${DATA_INSTALL_DIR}/kigo/themes)
